objects/Value_Delivery_Objectives_Options__c.object
<CustomObject>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check activity is completed</description>
        <label>Completed ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objectives_and_Attendees_for_Participant__c</fullName>
        <description>Objectives And Key Participants - Record type F</description>
        <label>Objectives and Attendees for Participant</label>
        <referenceTo>Value_Delivery_Setup__c</referenceTo>
        <relationshipLabel>Value Delivery Objectives Options</relationshipLabel>
        <relationshipName>Value_Delivery_Objectives_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Option_Description__c</fullName>
        <description>To Store Option Description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Option Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <description>To retrieve the option in order</description>
        <label>Sequence Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Value Delivery Objectives Options</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Value Delivery Objectives Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Delivery Objectives Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>